nullaway_error_54b56146-e3b7-47a2-82a8-68ccbbab5cf7.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/TilesetEntry.java:91: error: [NullAway] dereferenced expression this.tileset.getTile(this.animation.getCurrentFrame().getTileId()) is @Nullable
    return this.tileset.getTile(this.animation.getCurrentFrame().getTileId()).getBasicImage();
                                                                             ^
    (see http://t.uber.com/nullaway )
